--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
 
+
+.body-card img {
+  transition: transform .2s ease, box-shadow .2s ease;
+}
+
+.body-card:hover img {
+  transform: scale(1.03);
+  box-shadow: 0 10px 24px rgba(0,0,0,0.15);
+}
+
+.body-card.selected img {
+  outline: 3px solid var(--brand);
+  border-radius: 12px;
+}
+
+
+
     #progress, #progressCount, #pct {
     display: none !important;
    }
@@ -279,11 +296,28 @@ fieldset.step legend {
     };
 
     var BODY_TYPES = [
-      { key:'ECTO', name:'Ectomorfo', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='26' y='20' width='12' height='18' rx='6' fill='#34d399'/><rect x='24' y='38' width='16' height='20' rx='8' fill='#a7f3d0'/></svg>` },
-      { key:'MESO', name:'Mesomorfo', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='22' y='20' width='20' height='18' rx='8' fill='#34d399'/><rect x='20' y='38' width='24' height='20' rx='10' fill='#a7f3d0'/></svg>` },
-      { key:'ENDO', name:'Endomorfo', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='18' y='20' width='28' height='18' rx='10' fill='#34d399'/><rect x='14' y='38' width='36' height='20' rx='12' fill='#a7f3d0'/></svg>` },
-      { key:'EQUI', name:'Equilibrado', svg:`<svg viewBox='0 0 64 64' class='mx-auto h-16 w-16'><rect x='28' y='8' width='8' height='12' rx='4' fill='#10b981'/><rect x='24' y='20' width='16' height='18' rx='7' fill='#34d399'/><rect x='22' y='38' width='20' height='20' rx='9' fill='#a7f3d0'/></svg>` }
-    ];
+  { 
+    key:'ECTO',
+    name:'Biotipo 1',
+    img:'/img/biotipos/ecto.png'
+  },
+  { 
+    key:'MESO',
+    name:'Biotipo 2',
+    img:'/img/biotipos/meso.png'
+  },
+  { 
+    key:'ENDO',
+    name:'Biotipo 3',
+    img:'/img/biotipos/endo.png'
+  },
+  { 
+    key:'EQUI',
+    name:'Biotipo 4',
+    img:'/img/biotipos/equi.png'
+  }
+];
+
 
     var COMBOS = {
       'A-ECTO': { title:'Plano Ectomorfo Low Carb', desc:'Estratégia para reduzir gordura sem perder performance; mantém carboidratos de qualidade em treinos.' },
@@ -509,7 +543,12 @@ html += '</div>';
       for(var b=0;b<BODY_TYPES.length;b++){
         var bt = BODY_TYPES[b];
         var sel = (bodyTypeKey===bt.key)? ' selected':'';
-        html += '<div class="body-card'+sel+'" data-body="'+bt.key+'">'+bt.svg+'<div class="mt-2 font-semibold">'+bt.name+'</div></div>';
+        html += 
+ '<div class="body-card'+sel+'" data-body="'+bt.key+'">' +
+   '<img src="'+bt.img+'" class="w-full rounded-xl shadow-md mb-2" />' +
+   '<div class="mt-1 text-center font-semibold">'+bt.name+'</div>' +
+ '</div>';
+
       }
       html += '</div>';
     }
