--- a/index.html
+++ b/index.html
@@ -299,22 +299,22 @@ fieldset.step legend {
   { 
     key:'ECTO',
     name:'Biotipo 1',
-    img:'/img/biotipos/ecto.png'
+    img:'/img/biotipos/ecto.jpg'
   },
   { 
     key:'MESO',
     name:'Biotipo 2',
-    img:'/img/biotipos/meso.png'
+    img:'/img/biotipos/meso.jpg'
   },
   { 
     key:'ENDO',
     name:'Biotipo 3',
-    img:'/img/biotipos/endo.png'
+    img:'/img/biotipos/endo.jpg'
   },
   { 
     key:'EQUI',
     name:'Biotipo 4',
-    img:'/img/biotipos/equi.png'
+    img:'/img/biotipos/equi.jpg'
   }
 ];
 
