--- a/index.html
+++ b/index.html
@@ -298,22 +298,22 @@ fieldset.step legend {
     var BODY_TYPES = [
   { 
     key:'ECTO',
-    name:'Biotipo 1',
+    name:'Ectomorfo',
     img:'/img/biotipos/ecto.jpg'
   },
   { 
     key:'MESO',
-    name:'Biotipo 2',
+    name:'Mesomorfo',
     img:'/img/biotipos/meso.jpg'
   },
   { 
     key:'ENDO',
-    name:'Biotipo 3',
+    name:'Endomorfo',
     img:'/img/biotipos/endo.jpg'
   },
   { 
     key:'EQUI',
-    name:'Biotipo 4',
+    name:'Equilibrado',
     img:'/img/biotipos/equi.jpg'
   }
 ];
