--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ fieldset.step legend {
 
 
     /* Cartões do biotipo */
-    .body-card { background:#fff; border:1.5px solid #e5e7eb; border-radius:14px; padding:14px; text-align:center; cursor:pointer; transition: transform .16s ease, box-shadow .16s ease, border-color .16s ease; box-shadow: 0 4px 14px rgba(2, 6, 23, 0.06); }
+    .body-card { background:#fff; border:1.5px solid #e5e7eb; border-radius:14px; padding:10px; text-align:center; cursor:pointer; transition: transform .16s ease, box-shadow .16s ease, border-color .16s ease; box-shadow: 0 4px 14px rgba(2, 6, 23, 0.06); }
     .body-card:hover { transform: translateY(-1px); box-shadow: 0 8px 18px rgba(2, 6, 23, 0.10); border-color:#cbd5e1; }
     .body-card.selected { border-color:#10b981; box-shadow: 0 10px 24px rgba(16, 185, 129, 0.25); }
 
@@ -299,22 +299,22 @@ fieldset.step legend {
   { 
     key:'ECTO',
     name:'Ectomorfo',
-    img:'/img/biotipos/ecto.jpg'
+    img:'/img/biotipos/ecto.png'
   },
   { 
     key:'MESO',
     name:'Mesomorfo',
-    img:'/img/biotipos/meso.jpg'
+    img:'/img/biotipos/meso.png'
   },
   { 
     key:'ENDO',
     name:'Endomorfo',
-    img:'/img/biotipos/endo.jpg'
+    img:'/img/biotipos/endo.png'
   },
   { 
     key:'EQUI',
     name:'Equilibrado',
-    img:'/img/biotipos/equi.jpg'
+    img:'/img/biotipos/equi.png'
   }
 ];
 
