--- a/upsell/index.html
+++ b/upsell/index.html
@@ -153,8 +153,9 @@
   </footer>
 
   <!-- Script -->
-  <script>
+ <script>
 document.addEventListener("DOMContentLoaded", function(){
+
   const MP_PUBLIC_KEY = "APP_USR-87cc4830-2ac4-410d-82b8-f295612a75b0";
   const MP_ENDPOINT   = "https://dietapronta.online/api/mp-preference-upsell";
   const CHECK_STATUS  = "https://italomelo.com/server/check_status.php";
@@ -163,28 +164,33 @@ document.addEventListener("DOMContentLoaded", function(){
   function $(id){ return document.getElementById(id); }
   $('year').textContent = (new Date()).getFullYear();
 
-  // === Captura ref se o usuário retornou do Mercado Pago ===
-  let ref = new URLSearchParams(location.search).get("ref")
-           || localStorage.getItem("mp_external_ref_upsell");
+  // ⚠️ NÃO usamos mais o localStorage como ref primário
+  // O localStorage não cria REF; apenas armazena temporariamente.
+  let refFromURL = new URLSearchParams(location.search).get("ref") || "";
 
-  // Se o ref não existir ainda (primeira visita)
-  if (!ref) {
-    ref = "upsell-" + Date.now() + "-" + Math.random().toString(36).slice(2,8);
-    localStorage.setItem("mp_external_ref_upsell", ref);
+  console.log("REF na URL:", refFromURL);
+
+  // Se veio da URL → iniciar polling
+  if (refFromURL) {
+    console.log("🟢 Voltou do Mercado Pago com REF — iniciando polling automático");
+    startPolling(refFromURL);
   }
 
-  console.log("REF do Upsell:", ref);
-
   // === Pagamento Mercado Pago ===
-  const nome = localStorage.getItem('lead_nome') || '';
+  const nome  = localStorage.getItem('lead_nome')  || '';
   const email = localStorage.getItem('lead_email') || '';
   const whats = localStorage.getItem('lead_whats') || '';
 
   $('btnPagamento').addEventListener('click', async (ev) => {
     ev.preventDefault();
     const btn = $('btnPagamento');
+
     btn.disabled = true;
     btn.textContent = "Gerando pagamento...";
+
+    // 🔥 Ref só é criado no momento do clique (nunca antes)
+    const newRef = "upsell-" + Date.now() + "-" + Math.random().toString(36).slice(2,8);
+    localStorage.setItem("mp_external_ref_upsell", newRef);
 
     try {
       const r = await fetch(MP_ENDPOINT, {
@@ -192,7 +198,7 @@ document.addEventListener("DOMContentLoaded", function(){
         headers: {"Content-Type":"application/json"},
         body: JSON.stringify({
           valor: 9.90,
-          external_reference: ref, // 🔥 Agora o backend usa o mesmo ref
+          external_reference: newRef,
           customer_name: nome,
           customer_email: email,
           customer_whatsapp: whats
@@ -210,24 +216,23 @@ document.addEventListener("DOMContentLoaded", function(){
       });
 
       btn.textContent = "Abrindo pagamento...";
-      startPolling(ref, btn);
+
+      // polling após gerar pagamento
+      startPolling(newRef, btn);
 
     } catch (e) {
       console.error(e);
       btn.textContent = "Erro, tente novamente";
     }
+
     btn.disabled = false;
   });
 
-  // === Polling Automático (para computador) ===
-  // Se o usuário voltou do Mercado Pago, iniciamos automaticamente
-  if (document.referrer.includes("mercadopago") || location.search.includes("ref=")) {
-    console.log("🟢 Voltou do Mercado Pago — iniciando polling automático");
-    const fakeBtn = { textContent: "" };
-    startPolling(ref, fakeBtn);
-  }
-
+  // === Polling Seguro ===
   function startPolling(ref, btn) {
+
+    console.log("📡 Iniciando polling para:", ref);
+
     let tries = 0;
 
     const timer = setInterval(async () => {
@@ -236,21 +241,31 @@ document.addEventListener("DOMContentLoaded", function(){
       try {
         const res = await fetch(`${CHECK_STATUS}?ref=${encodeURIComponent(ref)}&t=${Date.now()}`);
         const data = await res.json();
+
         console.log("[Upsell Polling]", data);
 
         if (data && data.found && data.status?.toLowerCase() === "approved") {
           clearInterval(timer);
-          btn.textContent = "✅ Pagamento aprovado! Redirecionando...";
+
+          if (btn) btn.textContent = "✅ Pagamento aprovado! Redirecionando...";
+
           setTimeout(() => window.location.href = HOME_SUCCESS, 1500);
         }
-      } catch (e) { console.warn(e); }
+      } catch (e) {
+        console.warn("Erro no polling:", e);
+      }
 
-      if (tries > 50) clearInterval(timer);
+      if (tries > 50) {
+        console.warn("Polling encerrado por timeout");
+        clearInterval(timer);
+      }
 
     }, 4000);
   }
+
 });
 </script>
+
 
 
 
